--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <div>
 <script>
 {
-var link = window.prompt('URL To Video?')
+var link = window.prompt('URL To iFrame?')
 }</script>
   <iframe id="videoframe" scrolling="yes" height="350" width ="600" src=""></iframe>
 
