--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ var link = window.prompt('URL To iFrame?')
 <script>
     document.getElementById("videoframe").src =
               link
-  document.getElementById("videoframe").width = '100%'
-  document.getElementById("videoframe").eight = '100%'
+  document.getElementById("videoframe").style.width = '100%'
+  document.getElementById("videoframe").style.height = '100%'
 </script>
   </video>
   </div>
